# ai-engineering-zero-to-mastery

./: .gitignore  CHANGELOG.md  HANDBOOK.md  README.md  pyproject.toml  requirements.txt
.firecrawl/: search-feature-store-feast.json
.github/workflows/: curriculum-ci.yml
01-foundations-of-computing-and-programming/: README.md
01-foundations-of-computing-and-programming/01-1-programming-basics/: README.md
02-mathematics-for-ai/: README.md
03-classical-machine-learning/: README.md
04-deep-learning-fundamentals/: README.md
05-generative-models-and-llms/: README.md
06-mlops-and-llmops-production-ai-systems/: README.md
07-agentic-ai-and-applied-ai-systems-design/: README.md
08-responsible-ai-ethics-policy-and-career-readiness/: README.md
09-advanced-ai-specializations-rl-cv-nlp-and-domain-ai/: README.md
10-robotics-edge-ai-and-tinyml/: README.md
11-ai-product-entrepreneurship-and-research-methods/: README.md
12-mlops-and-llmops-production-ai-and-operations/: README.md
13-ai-safety-security-and-trustworthy-ai/: README.md
14-frontier-and-emerging-directions-in-ai/: README.md
15-ai-engineering-capstone-and-professional-practice/: README.md
curriculum/: README.md
curriculum/00-orientation/: README.md
docs/: documentation-map.md  glossary.md  learning-tracks.md  notebook-playbook.md  notebook-status.md  setup-and-troubleshooting.md  sources-and-references.md  start-here.md
foundations-of-computing-and-programming/: README.md
projects/: README.md
scripts/: export_theory_pdf.py  upgrade_selected_notebook_intros.py  validate_curriculum.py
(+336 files in other folders)
